--- a/dataClean.ipynb
+++ b/dataClean.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -75,7 +75,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -94,7 +94,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -103,7 +103,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -148,26 +148,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 30,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "<Figure size 1152x576 with 0 Axes>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "count_star = rawDataFrame[\"stars\"].value_counts()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -193,7 +183,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -269,7 +259,7 @@
        "max        5.000000"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -280,7 +270,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -289,7 +279,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
@@ -315,7 +305,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
@@ -406,7 +396,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
@@ -436,7 +426,7 @@
        " 'WheelchairAccessible']"
       ]
      },
-     "execution_count": 72,
+     "execution_count": 36,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -447,7 +437,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
@@ -618,10 +608,257 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "for column in removeColumn:\n",
+    "    del rawDataFrame[column]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "SColumns = [\"Alcohol\",\"NoiseLevel\",\"estaurantsAttire\",\"WiFi\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "rawDataFrame.fillna(0, inplace=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "tmpData = rawDataFrame.replace(' True',1).replace(' False',-1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 65,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# deal with alcohol\n",
+    "tmpData.replace(' none', -1,inplace=True).replace(' full_bar', 2,inplace=True).replace(' beer_and_wine', 1,inplace=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 69,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# deal with NoiseLevel\n",
+    "tmpData.replace({' quiet':1,' average':2,' loud':3,' very_loud':4},inplace=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 71,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "tmpData.replace({' casual':1,' dressy':2,' formal':3},inplace=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 72,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "tmpData.replace({' no':-1,' free':1,' paid':2},inplace=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 73,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "-1    17112\n",
+      " 2    15167\n",
+      " 0     9551\n",
+      " 1     5758\n",
+      "Name: Alcohol, dtype: int64\n",
+      "-1    20101\n",
+      " 1    16720\n",
+      " 0    10767\n",
+      "Name: Ambience casual, dtype: int64\n",
+      "-1    36079\n",
+      " 0    10767\n",
+      " 1      742\n",
+      "Name: Ambience classy, dtype: int64\n",
+      "-1    36104\n",
+      " 0    10767\n",
+      " 1      717\n",
+      "Name: Ambience hipster, dtype: int64\n",
+      "-1    36348\n",
+      " 0    10767\n",
+      " 1      473\n",
+      "Name: Ambience intimate, dtype: int64\n",
+      "-1    36664\n",
+      " 0    10767\n",
+      " 1      157\n",
+      "Name: Ambience touristy, dtype: int64\n",
+      "-1    35397\n",
+      " 0    10767\n",
+      " 1     1424\n",
+      "Name: Ambience trendy, dtype: int64\n",
+      "-1    36518\n",
+      " 0    10767\n",
+      " 1      303\n",
+      "Name: Ambience upscale, dtype: int64\n",
+      "-1    36364\n",
+      " 0    10767\n",
+      " 1      457\n",
+      "Name: Ambienceromantic, dtype: int64\n",
+      " 1    24465\n",
+      " 0    15339\n",
+      "-1     7784\n",
+      "Name: BikeParking, dtype: int64\n",
+      " 1    41160\n",
+      " 0     3935\n",
+      "-1     2493\n",
+      "Name: BusinessAcceptsCreditCards, dtype: int64\n",
+      "-1    23655\n",
+      " 1    15594\n",
+      " 0     8339\n",
+      "Name: BusinessParking lot, dtype: int64\n",
+      "-1    31063\n",
+      " 0     8339\n",
+      " 1     8186\n",
+      "Name: BusinessParking street, dtype: int64\n",
+      "-1    38263\n",
+      " 0     8339\n",
+      " 1      986\n",
+      "Name: BusinessParking valet, dtype: int64\n",
+      "-1    38040\n",
+      " 0     9334\n",
+      " 1      214\n",
+      "Name: BusinessParking validated, dtype: int64\n",
+      "-1    37165\n",
+      " 0     8339\n",
+      " 1     2084\n",
+      "Name: BusinessParkinggarage, dtype: int64\n",
+      " 1    35438\n",
+      "-1     7293\n",
+      " 0     4857\n",
+      "Name: GoodForKids, dtype: int64\n",
+      "-1    36396\n",
+      " 0     7889\n",
+      " 1     3303\n",
+      "Name: GoodForMeal breakfast, dtype: int64\n",
+      "-1    36561\n",
+      " 0     7889\n",
+      " 1     3138\n",
+      "Name: GoodForMeal brunch, dtype: int64\n",
+      "-1    26138\n",
+      " 1    13561\n",
+      " 0     7889\n",
+      "Name: GoodForMeal dinner, dtype: int64\n",
+      "-1    37472\n",
+      " 0     7889\n",
+      " 1     2227\n",
+      "Name: GoodForMeal latenight, dtype: int64\n",
+      "-1    24284\n",
+      " 1    15415\n",
+      " 0     7889\n",
+      "Name: GoodForMeal lunch, dtype: int64\n",
+      "-1    38335\n",
+      " 0     7889\n",
+      " 1     1364\n",
+      "Name: GoodForMealdessert, dtype: int64\n",
+      "-1    19190\n",
+      " 1    19104\n",
+      " 0     9294\n",
+      "Name: HasTV, dtype: int64\n",
+      "2    23321\n",
+      "0    11923\n",
+      "1     8255\n",
+      "3     3003\n",
+      "4     1086\n",
+      "Name: NoiseLevel, dtype: int64\n",
+      "-1    25085\n",
+      " 1    16594\n",
+      " 0     5909\n",
+      "Name: OutdoorSeating, dtype: int64\n",
+      "1    40779\n",
+      "0     5339\n",
+      "2     1352\n",
+      "3      118\n",
+      "Name: RestaurantsAttire, dtype: int64\n",
+      "-1    32358\n",
+      " 1     9448\n",
+      " 0     5782\n",
+      "Name: RestaurantsDelivery, dtype: int64\n",
+      " 1    37617\n",
+      "-1     5670\n",
+      " 0     4301\n",
+      "Name: RestaurantsGoodForGroups, dtype: int64\n",
+      " 2    23379\n",
+      " 1    18014\n",
+      "0      2953\n",
+      " 3     2723\n",
+      " 4      519\n",
+      "Name: RestaurantsPriceRange2, dtype: int64\n",
+      "-1    25165\n",
+      " 1    16914\n",
+      " 0     5509\n",
+      "Name: RestaurantsReservations, dtype: int64\n",
+      " 1    24423\n",
+      "-1    13369\n",
+      " 0     9796\n",
+      "Name: RestaurantsTableService, dtype: int64\n",
+      " 1    39968\n",
+      " 0     3980\n",
+      "-1     3640\n",
+      "Name: RestaurantsTakeOut, dtype: int64\n",
+      "-1    18458\n",
+      " 0    15285\n",
+      " 1    13575\n",
+      " 2      270\n",
+      "Name: WiFi, dtype: int64\n",
+      "4.0    12008\n",
+      "3.5    12004\n",
+      "3.0     8915\n",
+      "4.5     5325\n",
+      "2.5     4628\n",
+      "2.0     2413\n",
+      "5.0     1208\n",
+      "1.5      831\n",
+      "1.0      256\n",
+      "Name: stars, dtype: int64\n"
+     ]
+    }
+   ],
+   "source": [
+    "for column in tmpData.columns:\n",
+    "    print(tmpData[column].value_counts(dropna=False))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 74,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "tmpData.to_csv('dataSet_business.csv', index=False, header = True)"
+   ]
   }
  ],
  "metadata": {
@@ -629,6 +866,18 @@
    "display_name": "Python 3",
    "language": "python",
    "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.6.4"
   }
  },
  "nbformat": 4,
